feat: Add web app manifest and update favicon images
- Created a new web app manifest file for Vsave with icons and theme colors.
- Added new 192x192 and 512x512 PNG images for the web app manifest.
- Removed outdated icon images and replaced them with a new logo image.
- Updated the Collapsible component for improved readability and consistency.
- Refactored ExternalLink, HapticTab, HelloWave, ParallaxScrollView, ThemedText, ThemedView, and IconSymbol components for better code style and organization.
- Updated color constants to use consistent string quotes.
- Modified package.json to change the project name and add metadata.
- Added Prettier as a dev dependency and configured formatting script.
- Updated ESLint configuration to use consistent string quotes.
- Cleaned up TypeScript configuration for better readability.

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "VsaveFr",
-    "slug": "VsaveFr",
+    "name": "Vsave",
+    "slug": "Vsave",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "vsavefr",
+    "icon": "./assets/images/logo.png",
+    "scheme": "vsave",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/favicon/web-app-manifest-512x512.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
@@ -21,16 +21,15 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon/favicon.ico"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
+          "image": "./assets/images/splash-icon.jpg",
+          "resizeMode": "cover",
           "backgroundColor": "#ffffff"
         }
       ]
