ci: modularize PR automation and issue creation workflows
- Extracted reusable workflows:
  - create-issue.yml (deduplicated issue creation)
  - detect-pr.yml
  - create-pr.yml
  - extract-pr-metadata.yml
  - add-pr-metadata.yml

- Updated orchestrator (Automate Pull Request) to use workflow_call
- Added EXPO_TOKEN guard with issue reporting
- Prevented duplicate issue creation across PR triggers

--- a/app.json
+++ b/app.json
@@ -36,6 +36,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "a275033c-714c-435b-8121-562ccc9ceeb8"
+      }
     }
   }
 }
