--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "savings",
     "wallet",
     "lottery",
-    "finance"
+    "finance",
+    "management",
+    "money",
+    "digital",
+    "platform",
+    "team",
+    "admin"
   ],
   "license": "MIT",
   "repository": {
