--- a/.github/workflows/pr-checks-merge.yml
+++ b/.github/workflows/pr-checks-merge.yml
@@ -10,14 +10,10 @@ permissions:
   pull-requests: write
 
 jobs:
-  create_and_check_pr:
+  get-branch-and-setup:
     runs-on: ubuntu-latest
     outputs:
       pr_branch: ${{ steps.extract-branch.outputs.branch }}
-      pr_number: ${{ steps.get-pr.outputs.pr_number }}
-      pr_url: ${{steps.get-pr.outputs.pr_url}}
-      pr_create_status: ${{steps.pr-creation-status.outputs.pr_creation_status}}
-      skip_pr_creation: ${{ steps.pr-check.outputs.skip_pr_creation }}
     steps:
       - name: Extract branch name
         id: extract-branch
@@ -38,54 +34,61 @@ jobs:
 
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+  detect-existing-pr:
+    needs: [get-branch-and-setup]
+    uses: ./.github/workflows/detect-pr.yml
+    with:
+      branch: ${{needs.get-branch-and-setup.outputs.pr_branch}}
 
-      - name: Detect existing PR
-        id: pr-check
-        uses: ./.github/workflows/detect-pr.yml
+  create-pull-request:
+    needs: [get-branch-and-setup, detect-existing-pr]
+    if: needs.detect-existing-pr.outputs.skip_pr_creation == 'false'
+    uses: ./.github/workflows/create-pr.yml
+    with:
+      branch: ${{needs.get-branch-and-setup.outputs.pr_branch}}
 
-      - name: Create Pull Request
-        id: create-pr
-        if: steps.pr-check.outputs.skip_pr_creation == 'false'
-        uses: ./.github/workflows/create-pr.yml
+  get-pr:
+    needs: [get-branch-and-setup]
+    uses: ./.github/workflows/extract-pr-metadata.yml
+    with:
+      branch: ${{needs.get-branch-and-setup.outputs.pr_branch}}
 
-      - name: Get Pull Request Number
-        id: get-pr
-        uses: ./.github/workflows/extract-pr-metadata.yml
-
+  pr-output:
+    runs-on: ubuntu-latest
+    needs: [get-pr, detect-existing-pr]
+    outputs:
+      pr_create_status: ${{steps.pr-creation-status.outputs.pr_creation_status}}
+    steps:
       - name: Set Output On Success
         id: pr-creation-status
         if: success()
         run: echo "pr_creation_status=true" >> $GITHUB_OUTPUT
 
       - name: Log missing PR
-        if: steps.get-pr.outputs.pr_number == '' && steps.pr-check.outputs.skip_pr_creation == 'true'
+        if: needs.get-pr.outputs.pr_number == '' && needs.detect-existing-pr.outputs.skip_pr_creation == 'true'
         run: echo "No pull request found — skipping checks and merge."
 
   add-pr-metadata:
     runs-on: ubuntu-latest
-    needs: [create_and_check_pr]
+    needs: [pr-output, detect-existing-pr, get-pr]
     steps:
       - name: Add PR Metadata
-        if: needs.create_and_check_pr.outputs.pr_create_status == 'true' || needs.create_and_check_pr.outputs.skip_pr_creation == 'true'
+        if: needs.pr-output.outputs.pr_create_status == 'true' || needs.detect-existing-pr.outputs.skip_pr_creation == 'true'
         uses: ./.github/workflows/add-pr-metadata.yml
+        with:
+          pr_url: ${{needs.get-pr.outputs.pr_url}}
 
   run-checks:
-    runs-on: ubuntu-latest
-    needs: [create_and_check_pr]
-    outputs:
-      checks-passed: ${{ steps.run-checks.outputs.checks-passed }}
-    steps:
-      - name: Run Checks Workflow
-        if: needs.create_and_check_pr.outputs.pr_number != ''
-        uses: ./.github/workflows/checks.yml
-        with:
-          node-version: '20'
-        id: run-checks
+    needs: [get-pr]
+    if: needs.get-pr.outputs.pr_number != ''
+    uses: ./.github/workflows/checks.yml
+    with:
+      node-version: '20'
 
   auto-merge:
     runs-on: ubuntu-latest
-    needs: [create_and_check_pr, run-checks]
-    if: needs.run-checks.outputs.checks-passed == 'true' && needs.create_and_check_pr.outputs.pr_number != ''
+    needs: [get-pr, run-checks]
+    if: needs.run-checks.outputs.checks-passed == 'true' && needs.get-pr.outputs.pr_number != ''
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -94,4 +97,15 @@ jobs:
         uses: owen-6936/auto-merge-action@v1.1.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          pull-request-number: ${{ needs.create_and_check_pr.outputs.pr_number }}
+          pull-request-number: ${{ needs.get-pr.outputs.pr_number }}
+
+  log-summary:
+    runs-on: ubuntu-latest
+    needs: [get-pr, run-checks, auto-merge]
+    steps:
+      - name: Log PR Summary
+        run: |
+          echo "🔗 PR URL: ${{ needs.get-pr.outputs.pr_url }}"
+          echo "📦 PR Number: ${{ needs.get-pr.outputs.pr_number }}"
+          echo "✅ Checks Passed: ${{ needs.run-checks.outputs.checks-passed }}"
+          echo "🔀 Auto-Merged: ${{ needs.get-pr.outputs.pr_number != '' && needs.run-checks.outputs.checks-passed == 'true' }}"
