Revert "Feat/setup ci cd"

--- a/package.json
+++ b/package.json
@@ -7,13 +7,7 @@
     "savings",
     "wallet",
     "lottery",
-    "finance",
-    "management",
-    "money",
-    "digital",
-    "platform",
-    "team",
-    "admin"
+    "finance"
   ],
   "license": "MIT",
   "repository": {
