--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "expo": "^54.0.7",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
@@ -42,6 +44,7 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-value-picker": "^0.1.4",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "whatwg-fetch": "^3.6.20"
