--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "AsyncStorage": "^0.1.5",
     "clsx": "^2.1.1",
     "expo": "^54.0.7",
     "expo-constants": "~18.0.8",
@@ -32,6 +33,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "jsonwebtoken": "^9.0.2",
     "nativewind": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
@@ -44,7 +46,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "whatwg-fetch": "^3.6.20"
+    "whatwg-fetch": "^3.6.20",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
