--- a/package.json
+++ b/package.json
@@ -1,69 +1,69 @@
 {
-  "name": "vsavefrontend",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start --clear",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint",
-    "test": "echo \"There is currently no tests to run\""
-  },
-  "dependencies": {
-    "@expo/metro-runtime": "^6.1.2",
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
-    "@zod/core": "^0.11.6",
-    "clsx": "^2.1.1",
-    "country-state-city": "^3.2.1",
-    "expo": "~54.0.10",
-    "expo-constants": "~18.0.8",
-    "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.8",
-    "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
-    "lucide-react-native": "^0.544.0",
-    "nativewind": "^4.2.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "^0.81.4",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-value-picker": "^0.1.4",
-    "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "whatwg-fetch": "^3.6.20",
-    "zod": "^4.1.11",
-    "zustand": "^5.0.8"
-  },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0",
-    "expo-module-scripts": "^5.0.7",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.9.2"
-  },
-  "private": true
+    "name": "vsavefrontend",
+    "main": "expo-router/entry",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "expo start --clear",
+        "reset-project": "node ./scripts/reset-project.js",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "lint": "expo lint",
+        "test": "echo \"There is currently no tests to run\"",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "@expo/metro-runtime": "^6.1.2",
+        "@expo/vector-icons": "^15.0.2",
+        "@react-native-masked-view/masked-view": "^0.3.2",
+        "@react-native-picker/picker": "2.11.1",
+        "@react-navigation/bottom-tabs": "^7.4.0",
+        "@react-navigation/elements": "^2.6.3",
+        "@react-navigation/native": "^7.1.8",
+        "@zod/core": "^0.11.6",
+        "clsx": "^2.1.1",
+        "country-state-city": "^3.2.1",
+        "expo": "~54.0.10",
+        "expo-constants": "~18.0.8",
+        "expo-font": "~14.0.8",
+        "expo-haptics": "~15.0.7",
+        "expo-image": "~3.0.8",
+        "expo-linear-gradient": "~15.0.7",
+        "expo-linking": "~8.0.8",
+        "expo-router": "~6.0.8",
+        "expo-secure-store": "~15.0.7",
+        "expo-splash-screen": "~31.0.10",
+        "expo-status-bar": "~3.0.8",
+        "expo-symbols": "~1.0.7",
+        "expo-system-ui": "~6.0.7",
+        "expo-web-browser": "~15.0.7",
+        "lucide-react-native": "^0.544.0",
+        "nativewind": "^4.2.0",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-native": "^0.81.4",
+        "react-native-gesture-handler": "~2.28.0",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
+        "react-native-reanimated": "~4.1.1",
+        "react-native-safe-area-context": "~5.6.0",
+        "react-native-screens": "~4.16.0",
+        "react-native-svg": "15.12.1",
+        "react-native-value-picker": "^0.1.4",
+        "react-native-web": "~0.21.0",
+        "react-native-worklets": "0.5.1",
+        "whatwg-fetch": "^3.6.20",
+        "zod": "^4.1.11",
+        "zustand": "^5.0.8"
+    },
+    "devDependencies": {
+        "@types/react": "~19.1.0",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.25.0",
+        "eslint-config-expo": "~10.0.0",
+        "expo-module-scripts": "^5.0.7",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.17",
+        "typescript": "~5.9.2"
+    },
+    "private": true
 }
