--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,6 +62,8 @@ jobs:
         uses: expo/expo-github-action@v8
         with:
           token: ${{ secrets.EXPO_TOKEN }} # Make sure EXPO_TOKEN is set in your repository's GitHub Actions secrets
+          expo-version: "latest"
+          eas-version: "latest"
 
       - name: Install dependencies
         run: npm install
