--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,12 +1,13 @@
 name: "Continuous Integration"
 
 on:
-  workflow_run:
-    workflows: ["CodeQL Advanced"]
-    types: [completed]
+  pull_request:
+
+  push:
 
 jobs:
   run-checks:
+    if: (github.event_name == 'push' && (github.ref_name != 'main' && github.ref_name != 'master'))
     runs-on: "ubuntu-latest"
     outputs:
       checks-passed: ${{steps.ts-checks.outputs.checks-passed}}
@@ -21,7 +22,7 @@ jobs:
   deploy:
     runs-on: "ubuntu-latest"
     needs: [run-checks]
-    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' && needs.run-checks.outputs.checks-passed == 'true'
+    if: (github.event_name == 'push' && (github.ref_name == 'main'|| github.ref_name == 'master')) && needs.run-checks.outputs.checks-passed == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -64,6 +65,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }} # Make sure EXPO_TOKEN is set in your repository's GitHub Actions secrets
           expo-version: "latest"
           eas-version: "latest"
+          packager: "npm"
 
       - name: Install dependencies
         run: npm install
