--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
   deploy:
     runs-on: "ubuntu-latest"
     needs: [run-checks]
-    if: (github.event_name == 'push' && (github.ref_name == 'main'|| github.ref_name == 'master')) && needs.run-checks.outputs.checks-passed == 'true'
+    if: (github.event_name == 'push' && (github.ref_name == 'main'|| github.ref_name == 'master'))
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
