--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@zod/core": "^0.11.6",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
     "expo": "54.0.12",
