--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
     "semi": true,
     "singleQuote": false,
     "tabWidth": 4,
-    "trailingComma": "all",
+    "trailingComma": "es5",
     "printWidth": 80
 }
