--- a/app.json
+++ b/app.json
@@ -8,44 +8,44 @@
         "scheme": "vsavefrontend",
         "userInterfaceStyle": "automatic",
         "newArchEnabled": true,
+        "splash": {
+            "image": "./assets/images/splash-icon.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
         "ios": {
             "bundleIdentifier": "com.vsave.app",
             "supportsTablet": true,
             "infoPlist": {
                 "UIViewControllerBasedStatusBarAppearance": true
+            },
+            "splash": {
+                "image": "./assets/images/splash-icon.png",
+                "resizeMode": "cover", // iOS respects 'cover' for full-screen
+                "backgroundColor": "#191B1F"
             }
         },
         "android": {
             "package": "com.vsave.app",
             "adaptiveIcon": {
-                "backgroundColor": "#E6F4FE",
+                "backgroundColor": "#FFFFFF",
                 "foregroundImage": "./assets/images/android-icon-foreground.png",
                 "monochromeImage": "./assets/images/android-icon-monochrome.png"
             },
             "edgeToEdgeEnabled": true,
-            "predictiveBackGestureEnabled": false
+            "predictiveBackGestureEnabled": false,
+            "splash": {
+                "image": "./assets/images/android-icon-foreground.png",
+                "resizeMode": "cover",
+                "backgroundColor": "#191B1F"
+            }
         },
         "web": {
             "output": "static",
             "favicon": "./assets/images/favicon.png",
             "bundler": "metro"
         },
-        "plugins": [
-            "expo-router",
-            [
-                "expo-splash-screen",
-                {
-                    "image": "./assets/images/splash-icon.png",
-                    "resizeMode": "cover",
-                    "backgroundColor": "#ffffff",
-                    "dark": {
-                        "backgroundColor": "#000000"
-                    }
-                }
-            ],
-            "expo-secure-store",
-            "expo-web-browser"
-        ],
+        "plugins": ["expo-router", "expo-secure-store", "expo-web-browser"],
         "experiments": {
             "typedRoutes": true,
             "reactCompiler": true
