--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ app-example
 # generated native folders
 /ios
 /android
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
