--- a/package.json
+++ b/package.json
@@ -29,27 +29,27 @@
         "axios": "^1.12.2",
         "clsx": "^2.1.1",
         "country-state-city": "^3.2.1",
-        "expo": "54.0.12",
+        "expo": "54.0.20",
         "expo-constants": "~18.0.8",
         "expo-font": "~14.0.8",
         "expo-haptics": "~15.0.7",
-        "expo-image": "~3.0.9",
+        "expo-image": "~3.0.10",
         "expo-image-picker": "~17.0.8",
         "expo-linear-gradient": "~15.0.7",
         "expo-linking": "~8.0.8",
         "expo-local-authentication": "~17.0.7",
-        "expo-router": "~6.0.10",
+        "expo-router": "~6.0.13",
         "expo-secure-store": "~15.0.7",
         "expo-splash-screen": "~31.0.10",
         "expo-status-bar": "~3.0.8",
         "expo-symbols": "~1.0.7",
-        "expo-system-ui": "~6.0.7",
+        "expo-system-ui": "~6.0.8",
         "expo-web-browser": "~15.0.8",
         "lucide-react-native": "^0.544.0",
         "nativewind": "^4.2.0",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "react-native": "^0.81.4",
+        "react-native": "0.81.5",
         "react-native-gesture-handler": "~2.28.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.5",
         "react-native-reanimated": "~4.1.1",
@@ -69,6 +69,7 @@
         "eslint": "^9.25.0",
         "eslint-config-expo": "~10.0.0",
         "expo-module-scripts": "^5.0.7",
+        "mongoose": "^8.19.2",
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.17",
         "typescript": "~5.9.2"
