--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "clsx": "^2.1.1",
         "country-state-city": "^3.2.1",
         "expo": "54.0.20",
+        "expo-clipboard": "~8.0.7",
         "expo-constants": "~18.0.8",
         "expo-font": "~14.0.8",
         "expo-haptics": "~15.0.7",
