--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
             },
             "splash": {
                 "image": "./assets/images/splash-icon.png",
-                "resizeMode": "cover", // iOS respects 'cover' for full-screen
+                "resizeMode": "cover",
                 "backgroundColor": "#191B1F"
             }
         },
@@ -45,7 +45,7 @@
             "favicon": "./assets/images/favicon.png",
             "bundler": "metro"
         },
-        "plugins": ["expo-router", "expo-secure-store", "expo-web-browser"],
+        "plugins": ["expo-router", "expo-secure-store"],
         "experiments": {
             "typedRoutes": true,
             "reactCompiler": true
